--- a/configure.ac
+++ b/configure.ac
@@ -2748,7 +2748,7 @@ AC_SUBST(ORACLE8_INCLUDE)
 # Check for DocBook and tools
 #
 PGAC_PROG_JADE
-PGAC_CHECK_DOCBOOK([4.1 3.1 3.0])
+PGAC_CHECK_DOCBOOK([4.5 4.1 3.1 3.0])
 PGAC_PATH_DOCBOOK_STYLESHEETS
 PGAC_PATH_COLLATEINDEX
 doc_FILES_EN="HTML_DEP_NOJADE_EN"
