--- a/Makefile.in
+++ b/Makefile.in
@@ -168,8 +168,8 @@ CTAGS = ctags
 CSCOPE = cscope
 DIST_SUBDIRS = $(SUBDIRS)
 am__DIST_COMMON = $(srcdir)/Makefile.in \
-	$(top_srcdir)/perl/Makefile.PL.in AUTHORS ChangeLog INSTALL \
-	README TODO compile config.guess config.sub install-sh \
+	$(top_srcdir)/perl/Makefile.PL.in AUTHORS COPYING ChangeLog \
+	INSTALL README TODO compile config.guess config.sub install-sh \
 	ltconfig ltmain.sh missing mkinstalldirs
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 distdir = $(PACKAGE)-$(VERSION)
@@ -379,6 +379,7 @@ db_PROGS = @db_PROGS@
 doc_FILES_EN = @doc_FILES_EN@
 doc_FILES_RU = @doc_FILES_RU@
 docdir = @docdir@
+dp_tar_flags = @dp_tar_flags@
 dvidir = @dvidir@
 exec_prefix = @exec_prefix@
 have_docbook = @have_docbook@
@@ -402,6 +403,7 @@ pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+runstatedir = @runstatedir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
@@ -942,8 +944,7 @@ uninstall-local:
 bin-dist:
 	$(MAKE) install DESTDIR=$(CDIR)/$(PACKAGE)-$(VERSION)
 	cd $(CDIR)/$(PACKAGE)-$(VERSION)$(prefix) \
-		&& tar -ycPf $(PACKAGE)-$(VERSION)-$(DBTYPE)-$(host_triplet)-$(LINKING).tar.bz2 ./
-	mv $(CDIR)/$(PACKAGE)-$(VERSION)$(prefix)/*.tar.bz2 $(CDIR)
+		&& tar $(dp_tar_flags) ../$(PACKAGE)-$(VERSION)-$(DBTYPE)-$(host_triplet)-$(LINKING).tar.bz2 ./
 	rm -r $(CDIR)/$(PACKAGE)-$(VERSION)
 
 libtool: $(LIBTOOL_DEPS)
