--- a/etc/Makefile.in
+++ b/etc/Makefile.in
@@ -326,6 +326,7 @@ db_PROGS = @db_PROGS@
 doc_FILES_EN = @doc_FILES_EN@
 doc_FILES_RU = @doc_FILES_RU@
 docdir = @docdir@
+dp_tar_flags = @dp_tar_flags@
 dvidir = @dvidir@
 exec_prefix = @exec_prefix@
 have_docbook = @have_docbook@
@@ -349,6 +350,7 @@ pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+runstatedir = @runstatedir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
