--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -702,6 +702,7 @@ db_PROGS = @db_PROGS@
 doc_FILES_EN = @doc_FILES_EN@
 doc_FILES_RU = @doc_FILES_RU@
 docdir = @docdir@
+dp_tar_flags = @dp_tar_flags@
 dvidir = @dvidir@
 exec_prefix = @exec_prefix@
 have_docbook = @have_docbook@
@@ -725,6 +726,7 @@ pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+runstatedir = @runstatedir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
