--- a/Makefile.in
+++ b/Makefile.in
@@ -168,8 +168,8 @@ CTAGS = ctags
 CSCOPE = cscope
 DIST_SUBDIRS = $(SUBDIRS)
 am__DIST_COMMON = $(srcdir)/Makefile.in \
-	$(top_srcdir)/perl/Makefile.PL.in AUTHORS COPYING ChangeLog \
-	INSTALL README TODO compile config.guess config.sub install-sh \
+	$(top_srcdir)/perl/Makefile.PL.in AUTHORS ChangeLog INSTALL \
+	README TODO compile config.guess config.sub install-sh \
 	ltconfig ltmain.sh missing mkinstalldirs
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 distdir = $(PACKAGE)-$(VERSION)
