--- a/dp-configure.in
+++ b/dp-configure.in
@@ -37,7 +37,7 @@ AC_SUBST(LIBTOOL_DEPS)
 
 dnl Checks for header files.
 AC_STDC_HEADERS
-AC_CHECK_HEADERS(fcntl.h unistd.h libutil.h \
+AC_CHECK_HEADERS(fcntl.h unistd.h bsd/unistd.h libutil.h bsd/libutil.h \
   sys/ioctl.h sys/time.h sys/times.h sys/param.h sys/wait.h sys/mman.h \
   getopt.h syslog.h select.h sys/select.h sys/socket.h arpa/inet.h netdb.h\
   netinet/in.h netinet/in_systm.h  netinet/ip.h  netinet/tcp.h netinet/in.h\
