--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,29 @@
-.svn
-*~
 *.bak
-*.o
-*.lo
+*.bz2
+*.cgi
+*.deb
 *.la
+*.lo
+*.log
+*.o
+*.sql
+*~
 .deps/
 .libs/
+.svn
+Makefile
+autom4te.cache/
+cached
+config.status
+dp.inc
+dpconv
+dpguesser
+dps_config.h
+dpurl2text
+indexer
+libtool
+searchd
+splitter
+stored
+dps-config
+run-splitter
