--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -96,7 +96,8 @@ am__aclocal_m4_deps = $(top_srcdir)/build/m4/libtool.m4 \
 	$(top_srcdir)/build/m4/ltsugar.m4 \
 	$(top_srcdir)/build/m4/ltversion.m4 \
 	$(top_srcdir)/build/m4/lt~obsolete.m4 \
-	$(top_srcdir)/acinclude.m4 $(top_srcdir)/build/m4/docbook.m4 \
+	$(top_srcdir)/build/m4/pkg.m4 $(top_srcdir)/acinclude.m4 \
+	$(top_srcdir)/build/m4/docbook.m4 \
 	$(top_srcdir)/build/m4/net.m4 \
 	$(top_srcdir)/build/m4/threads.m4 \
 	$(top_srcdir)/build/m4/qsort_r.m4 \
@@ -191,6 +192,9 @@ CFLAGS = @CFLAGS@
 COLLATEINDEX = @COLLATEINDEX@
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
+CRYPTO_CFLAGS = @CRYPTO_CFLAGS@
+CRYPTO_LIBS = @CRYPTO_LIBS@
+CRYPTO_PKG = @CRYPTO_PKG@
 CTLIB_INCLUDE = @CTLIB_INCLUDE@
 CTLIB_LFLAGS = @CTLIB_LFLAGS@
 CYGPATH_W = @CYGPATH_W@
@@ -243,6 +247,7 @@ LT_SYS_LIBRARY_PATH = @LT_SYS_LIBRARY_PATH@
 MAINT = @MAINT@
 MAKEINFO = @MAKEINFO@
 MANIFEST_TOOL = @MANIFEST_TOOL@
+MBEDTLS_MINIMUM = @MBEDTLS_MINIMUM@
 MECAB_INCLUDE = @MECAB_INCLUDE@
 MECAB_LFLAGS = @MECAB_LFLAGS@
 MKDIR_P = @MKDIR_P@
@@ -256,6 +261,9 @@ NMEDIT = @NMEDIT@
 NSGMLS = @NSGMLS@
 OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
+OPENSSL_CFLAGS = @OPENSSL_CFLAGS@
+OPENSSL_LIBS = @OPENSSL_LIBS@
+OPENSSL_MINIMUM = @OPENSSL_MINIMUM@
 ORACLE7_INCLUDE = @ORACLE7_INCLUDE@
 ORACLE7_LFLAGS = @ORACLE7_LFLAGS@
 ORACLE8_INCLUDE = @ORACLE8_INCLUDE@
@@ -275,6 +283,9 @@ PGSQL_LFLAGS = @PGSQL_LFLAGS@
 PHP_EXTENSION_DIR = @PHP_EXTENSION_DIR@
 PHP_INCLUDES = @PHP_INCLUDES@
 PHP_MODULE = @PHP_MODULE@
+PKG_CONFIG = @PKG_CONFIG@
+PKG_CONFIG_LIBDIR = @PKG_CONFIG_LIBDIR@
+PKG_CONFIG_PATH = @PKG_CONFIG_PATH@
 PORTNAME = @PORTNAME@
 PTHREAD_CFLAGS = @PTHREAD_CFLAGS@
 PTHREAD_LDADD = @PTHREAD_LDADD@
@@ -291,8 +302,6 @@ SQLITE3_INCLUDE = @SQLITE3_INCLUDE@
 SQLITE3_LFLAGS = @SQLITE3_LFLAGS@
 SQLITE_INCLUDE = @SQLITE_INCLUDE@
 SQLITE_LFLAGS = @SQLITE_LFLAGS@
-SSL_INCLUDE = @SSL_INCLUDE@
-SSL_LFLAGS = @SSL_LFLAGS@
 STATIC_LFLAGS = @STATIC_LFLAGS@
 STRIP = @STRIP@
 TCMALLOC_LFLAGS = @TCMALLOC_LFLAGS@
@@ -302,6 +311,9 @@ USE_APACHE_MODULE = @USE_APACHE_MODULE@
 VERSION = @VERSION@
 VIRT_INCLUDE = @VIRT_INCLUDE@
 VIRT_LFLAGS = @VIRT_LFLAGS@
+WOLFSSL_CFLAGS = @WOLFSSL_CFLAGS@
+WOLFSSL_LIBS = @WOLFSSL_LIBS@
+WOLFSSL_MINIMUM = @WOLFSSL_MINIMUM@
 abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
 abs_top_builddir = @abs_top_builddir@
