--- a/scripts/dps-config.in
+++ b/scripts/dps-config.in
@@ -6,8 +6,8 @@ sysconfdir=@sysconfdir@
 dpsearch_cflags="@CFLAGS@ @PTHREAD_CFLAGS@ -I@prefix@/include @VIRT_INCLUDE@ @SOLID_INCLUDE@ @UNIXODBC_INCLUDE@ @IODBC_INCLUDE@ @EASYSOFT_INCLUDE@ @MYSQL_INCLUDE@ @PGSQL_INCLUDE@ @MSQL_INCLUDE@ @IBASE_INCLUDE@ @ORACLE8_INCLUDE@ @ORACLE7_INCLUDE@ @MECAB_INCLUDE@"
 dpsearch_tl_cflags="@CFLAGS@ -I@prefix@/include @VIRT_INCLUDE@ @SOLID_INCLUDE@ @UNIXODBC_INCLUDE@ @IODBC_INCLUDE@ @EASYSOFT_INCLUDE@ @MYSQL_INCLUDE@ @PGSQL_INCLUDE@ @MSQL_INCLUDE@ @IBASE_INCLUDE@ @ORACLE8_INCLUDE@ @ORACLE7_INCLUDE@ @MECAB_INCLUDE@"
 
-dpsearch_libs="-L@prefix@/lib -ldpsearch -ldpcharset @LIBS@ @PTHREAD_LFLAGS@ @VIRT_LFLAGS@ @SOLID_LFLAGS@ @UNIXODBC_LFLAGS@ @IODBC_LFLAGS@ @EASYSOFT_LFLAGS@ @MYSQL_LFLAGS@ @PGSQL_LFLAGS@ @MSQL_LFLAGS@ @IBASE_LFLAGS@ @ORACLE8_LFLAGS@ @ORACLE7_LFLAGS@ @SSL_LFLAGS@ @PTHREAD_LDADD@ @MECAB_LFLAGS@"
-dpsearch_tl_libs="-L@prefix@/lib -ldpsearch_mod -ldpcharset @LIBS@ @VIRT_LFLAGS@ @SOLID_LFLAGS@ @UNIXODBC_LFLAGS@ @IODBC_LFLAGS@ @EASYSOFT_LFLAGS@ @MYSQL_LFLAGS@ @PGSQL_LFLAGS@ @MSQL_LFLAGS@ @IBASE_LFLAGS@ @ORACLE8_LFLAGS@ @ORACLE7_LFLAGS@ @SSL_LFLAGS@ @MECAB_LFLAGS@"
+dpsearch_libs="-L@prefix@/lib -ldpsearch -ldpcharset @LIBS@ @PTHREAD_LFLAGS@ @VIRT_LFLAGS@ @SOLID_LFLAGS@ @UNIXODBC_LFLAGS@ @IODBC_LFLAGS@ @EASYSOFT_LFLAGS@ @MYSQL_LFLAGS@ @PGSQL_LFLAGS@ @MSQL_LFLAGS@ @IBASE_LFLAGS@ @ORACLE8_LFLAGS@ @ORACLE7_LFLAGS@ @CRYPTO_LIBS@ @PTHREAD_LDADD@ @MECAB_LFLAGS@"
+dpsearch_tl_libs="-L@prefix@/lib -ldpsearch_mod -ldpcharset @LIBS@ @VIRT_LFLAGS@ @SOLID_LFLAGS@ @UNIXODBC_LFLAGS@ @IODBC_LFLAGS@ @EASYSOFT_LFLAGS@ @MYSQL_LFLAGS@ @PGSQL_LFLAGS@ @MSQL_LFLAGS@ @IBASE_LFLAGS@ @ORACLE8_LFLAGS@ @ORACLE7_LFLAGS@ @CRYPTO_LIBS@ @MECAB_LFLAGS@"
 
 usage()
 {
