--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -245,7 +245,7 @@ AM_CPPFLAGS = -I$(srcdir)/../include @AM_CPPFLAGS@ \
 @ORACLE8_INCLUDE@ \
 @ORACLE7_INCLUDE@ \
 @SAPDB_INCLUDE@ \
-@SSL_INCLUDE@ \
+@CRYPTO_CFLAGS@ \
 @DMALLOC_INCLUDE@ \
 @BOEHMGC_INCLUDE@ \
 @MECAB_INCLUDE@ 
@@ -267,7 +267,7 @@ LIBS = @LIBS@ @STATIC_LFLAGS@ \
 @ORACLE8_LFLAGS@ \
 @ORACLE7_LFLAGS@ \
 @SAPDB_LFLAGS@ \
-@SSL_LFLAGS@ \
+@CRYPTO_LIBS@ \
 @BOEHMGC_LFLAGS@ \
 @MECAB_LFLAGS@ \
 @DMALLOC_LFLAGS@ \
