--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -686,6 +686,10 @@ USE_APACHE_MODULE = @USE_APACHE_MODULE@
 VERSION = @VERSION@
 VIRT_INCLUDE = @VIRT_INCLUDE@
 VIRT_LFLAGS = @VIRT_LFLAGS@
+WITH_HTTPS = @WITH_HTTPS@
+WITH_MBEDTLS = @WITH_MBEDTLS@
+WITH_OPENSSL = @WITH_OPENSSL@
+WITH_WOLFSSL = @WITH_WOLFSSL@
 WOLFSSL_CFLAGS = @WOLFSSL_CFLAGS@
 WOLFSSL_LIBS = @WOLFSSL_LIBS@
 WOLFSSL_MINIMUM = @WOLFSSL_MINIMUM@
