--- a/create/pgsql/Makefile.in
+++ b/create/pgsql/Makefile.in
@@ -192,6 +192,8 @@ FGREP = @FGREP@
 GREP = @GREP@
 IBASE_INCLUDE = @IBASE_INCLUDE@
 IBASE_LFLAGS = @IBASE_LFLAGS@
+IDN_CFLAGS = @IDN_CFLAGS@
+IDN_LIBS = @IDN_LIBS@
 INSTALL = @INSTALL@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
