--- a/etc/Makefile.in
+++ b/etc/Makefile.in
@@ -101,6 +101,7 @@ am__aclocal_m4_deps = $(top_srcdir)/build/m4/libtool.m4 \
 	$(top_srcdir)/build/m4/net.m4 \
 	$(top_srcdir)/build/m4/threads.m4 \
 	$(top_srcdir)/build/m4/qsort_r.m4 \
+	$(top_srcdir)/build/m4/reuseport.m4 \
 	$(top_srcdir)/build/m4/ax_func_which_gethostbyname_r.m4 \
 	$(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
